<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailUserActivity">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:id="@+id/img_item_photo"
        android:background="@color/teal_700"/>

    <TextView
        android:id="@+id/tv_createdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_item_photo"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        android:text="@string/create_at"/>


    <TextView
        android:id="@+id/tv_item_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_createdate"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/name"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_item_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_item_name"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/detail" />


</RelativeLayout>

